ipc/ipdl/test/ipdl/error/compressCtor.ipdl
//error: destructor messages can't use compression (here, in protocol `compressCtorManagee')
//error: constructor messages can't use compression (here, in protocol `compressCtor')

include protocol compressCtorManagee;

[ChildProc=any]
intr protocol compressCtor {
    manages compressCtorManagee;

parent:
    [Compress] async compressCtorManagee();
};
